Added activities and core functionality of NavigationBar to switch between them

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">SailTracker</string>
+
+
+    <string name="home">home</string>
+    <string name="calender">calender</string>
+    <string name="gallery">gallery</string>
+    <string name="search">search</string>
 </resources>
