--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">SailTracker</string>
 
 
-    <string name="home">home</string>
-    <string name="calender">calender</string>
-    <string name="gallery">gallery</string>
-    <string name="search">search</string>
+    <string name="home">Home</string>
+    <string name="calendar">Calendar</string>
+    <string name="gallery">Gallery</string>
+    <string name="search">Search</string>
 </resources>
