--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,14 @@
     <string name="points">points</string>
     <string name="sails">sails</string>
 
+    <string name="my_next_sailing">My Next Sailing</string>
+
+    <string name="example_sail_name">Single Handed Guided Sail</string>
+
+    <string name="example_date">19.09.2020</string>
+    <string name="example_hour">15:00</string>
+    <string name="example_place">Marina Shavit, Haifa</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
