--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,11 @@
     <string name="example_date">19.09.2020</string>
     <string name="example_hour">15:00</string>
     <string name="example_place">Marina Shavit, Haifa</string>
+    <string name="example_phone">050—1234567</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="next">Next</string>
+
+
+
+    <string name="log_in_message">Please insert your phone number to log-in</string>
 </resources>
