--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="example_place">Marina Shavit, Haifa</string>
     <string name="example_phone">050—1234567</string>
     <string name="example_code">123456</string>
+    <string name="example_name">Israel Israeli</string>
     <string name="example_sail_name">Single Handed Guided Sail</string>
 
     <string name="next">Next</string>
