Added purchase button & image into event item layout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <!-- SINGLE WORDS -->
     <string name="points">points</string>
     <string name="sails">sails</string>
+    <string name="purchase">purchase</string>
 
     <string name="my_next_sailing">My Next Sailing</string>
 
