--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,6 @@
     <string name="next">Next</string>
 
 
-
     <!-- GALLERY SCREEN -->
     <string name="take_photo">Take a Photo</string>
 
@@ -54,4 +53,6 @@
     <string name="add_event_start">Select Start Time</string>
     <string name="add_event_end">Select End Time</string>
     <string name="add_event_description">Insert Event Description</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
