--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,9 @@
     <string name="price">Price</string>
     <string name="finish">Finish</string>
     <string name="add">Add</string>
-    <string name="dash">-</string>
+    <string name="dash_symbol">-</string>
+    <string name="next">Next</string>
+    <string name="back">Back</string>
 
     <string name="my_next_sailing">My Next Sailing</string>
 
@@ -34,8 +36,6 @@
     <string name="example_sail_name">Single Handed Guided Sail</string>
     <string name="example_sail_description">Learn how to sail by using one hand only</string>
 
-    <string name="next">Next</string>
-
 
     <!-- GALLERY SCREEN -->
     <string name="take_photo">Take a Photo</string>
@@ -46,13 +46,14 @@
     <string name="login_name">Choose your display name:</string>
 
     <!-- ADDING EVENT TITLES -->
-    <string name="add_event_title">New Event</string>
+    <string name="add_event_title">Add Event</string>
     <string name="add_event_name_label">Event Name:</string>
     <string name="add_event_name_hint">Insert Event Name</string>
     <string name="add_event_max_participants">Max Participants</string>
     <string name="add_event_start">Select Start Time</string>
     <string name="add_event_end">Select End Time</string>
     <string name="add_event_description">Insert Event Description</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_event_time_start_label">Starts at</string>
+    <string name="add_event_time_end_label">Ends at</string>
+
 </resources>
