Implemented simple Add Points demo button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,6 +17,7 @@
     <string name="dash_symbol">-</string>
     <string name="next">Next</string>
     <string name="back">Back</string>
+    <string name="plus_sign">+</string>
 
     <string name="my_next_sailing">My Next Sailing</string>
 
