--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="back">Back</string>
     <string name="plus_sign">+</string>
 
-    <string name="my_next_sailing">My Next Sailing</string>
+    <string name="my_next_sail">My Next Sail</string>
 
     <!-- Event/Sail Types -->
     <string name="free_event">Free Event</string>
@@ -38,6 +38,7 @@
     <string name="example_sail_name">Single Handed Guided Sail</string>
     <string name="example_sail_description">Learn how to sail by using one hand only</string>
     <string name="number_00">00</string>
+    <string name="example_registration_status">3/6 Registered</string>
 
 
     <!-- GALLERY SCREEN -->
@@ -60,11 +61,10 @@
     <string name="add_event_time_end_label">Ends at</string>
     <string name="add_event_hour_empty">--:--</string>
 
+    <!-- MESSAGES -->
+    <string name="no_next_sail">There is no upcoming sail…</string>
 
-    <!-- OTHER -->
+    <!-- SPECIAL FORMATS -->
     <string name="hour_time_format">%02d:%02d</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
-
 
 </resources>
